--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.7",
     "@mui/styled-engine-sc": "^5.8.0",
+    "@mui/styles": "^5.8.7",
     "i18next": "^21.8.13",
     "i18next-browser-languagedetector": "^6.1.4",
     "i18next-http-backend": "^1.4.1",
+    "notistack": "^2.0.5",
     "react": "^18.0.0",
+    "react-country-flag": "^3.0.2",
     "react-dom": "^18.0.0",
+    "react-dropzone": "^14.2.2",
     "react-i18next": "^11.18.0",
     "styled-components": "^5.3.5"
   },
